welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini : Boolean = false
^BDRBuggle:2: error: expected class or object definition
while (fini != true) {
^BDRBuggle:5: error: Missing closing brace `}' assumed here
	if litMessage == 'R' {droite(); avance()}
        ^